15830
Compiling this code
```scala
object Error {
  def f {
    case class X(b: Boolean = false)
    val x = X()
  }
}
```
with scalac 2.8.1.final yields:
```scala
Error.scala:4: error: forward reference extends over definition of value x
    val x = X()
            ^
one error found
```

This seems similar to ticket scala/bug#2489, but this has been fixed and the code from that ticket compiles without errors.

Versions
 * Scala:
```scala
$$ scalac -version
Scala compiler version 2.8.1.final -- Copyright 2002-2010, LAMP/EPFL
```
 * Java:
```scala
$$ java -version
java version "1.6.0_20"
Java(TM) SE Runtime Environment (build 1.6.0_20-b02-279-10M3065)
Java HotSpot(TM) 64-Bit Server VM (build 16.3-b01-279, mixed mode)
```
 * Operating system: Mac OS X 10.6.4 Build 10F569
```scala
$$ uname -a
Darwin john.doe.com 10.4.0 Darwin Kernel Version 10.4.0: Fri Apr 23 18:28:53 PDT 2010; root:xnu-1504.7.4~1/RELEASE_I386 i386
```
